--- a/rsvp.html
+++ b/rsvp.html
@@ -14,10 +14,10 @@
 
   <div class="nav-center">
     <div class="menu">
-      <a href="#fete">La fête</a>
-      <a href="#histoire">Notre histoire</a>
-      <a href="#demande">La demande</a>
-      <a href="#faq">FAQ</a>
+      <a href="main.html#fete">La fête</a>
+      <a href="main.html#histoire">Notre histoire</a>
+      <a href="main.html#demande">La demande</a>
+      <a href="main.html#faq">FAQ</a>
     </div>
   </div>
 
@@ -116,6 +116,7 @@
 
 </body>
 </html>
+
 
 
 
