--- a/histoire.html
+++ b/histoire.html
@@ -62,7 +62,7 @@
       Résultat : premier slow, premier bisou… et le début de leur histoire.
     </p>
   </div>
-  <img src="image/PH_CH4.png" alt="Rencontre" class="image-chapitre">
+  <img src="PH_CH4.png" alt="Rencontre" class="image-chapitre">
 </div>
 
 
@@ -78,7 +78,7 @@
         Skype était là (et surtout le réveil du matin de papa pour parler à maman malgré
         le décalage).</p>
         </div>
-      <img src="image/PH_CH4.png" alt="Adolescence" class="image-chapitre">
+      <img src="PH_CH4.png" alt="Adolescence" class="image-chapitre">
     </div>
 
 
@@ -96,7 +96,7 @@
         mais finalement, ils se sont retrouvés pour de bon, dans un appartement à Puplinge. Et cette fois,
         c’était la bonne.</p>
     </div>
-    <img src="image/PH_CH4.png" alt="Université" class="image-chapitre">
+    <img src="PH_CH4.png" alt="Université" class="image-chapitre">
 </div>
 
     <div class="chapitre">
@@ -108,7 +108,7 @@
         Le 31 mars 2025, je fais mon entrée dans ce monde (et accessoirement, je
         chamboule un peu leur planning de mariage).</p>
     </div>
-    <img src="image/PH_CH4.png" alt="Demande en mariage" class="image-chapitre">
+    <img src="PH_CH4.png" alt="Demande en mariage" class="image-chapitre">
 </div>
 
 
@@ -122,7 +122,7 @@
         Mes parents sont la preuve vivante qu’avec de la patience, beaucoup d’humour et un peu de Skype,
         l’amour peut tout traverser.</p>
     </div>
-    <img src="image/PH_CH4.png" alt="Aujourd'hui" class="image-chapitre">
+    <img src="PH_CH4.png" alt="Aujourd'hui" class="image-chapitre">
     </div>
 
     <p class="signature">
@@ -135,3 +135,4 @@
 
 </body>
 </html>
+
