--- a/histoire.html
+++ b/histoire.html
@@ -16,10 +16,10 @@
 
   <div class="nav-center">
     <div class="menu">
-      <a href="main.htlm#fete">La fête</a>
-      <a href="main.htlm#histoire">Notre histoire</a>
-      <a href="main.htlm#demande">La demande</a>
-      <a href="main.htlm#faq">FAQ</a>
+      <a href="main.html#fete">La fête</a>
+      <a href="main.html#histoire">Notre histoire</a>
+      <a href="main.html#demande">La demande</a>
+      <a href="main.html#faq">FAQ</a>
     </div>
   </div>
 
@@ -135,5 +135,6 @@
 
 </body>
 </html>
+
 
 
