--- a/main.html
+++ b/main.html
@@ -55,7 +55,7 @@
       const now = new Date().getTime();
       const distance = eventDate - now;
       if (distance < 0) {
-        document.getElementById("countdown").innerHTML = "C'est le grand jour 🎉";
+        document.getElementById("countdown").innerHTML = "C'est le grand jour ";
         return;
       }
       const d = Math.floor(distance / (1000*60*60*24));
@@ -112,12 +112,12 @@
       <div class="timeline-item right">
         <div class="content">
           <h3>14H30 – Cérémonie 💍</h3>
-          <p>Cérémonie laïque en plein air.</p>
+          <p>Cérémonie laïque en plein air</p>
         </div>
       </div>
       <div class="timeline-item left">
         <div class="content">
-          <h3>15H30 –Rallye </h3>
+          <h3>15H30 –Rallye 🚩</h3>
           <p>Jeux et défis en équipes</p>
         </div>
       </div>
@@ -203,7 +203,7 @@
 
           <p class="information-titre" style="font-weight: bold;">1. Chambres à l’hôtel Chäserstatt (sur place)</p>
             <p class="information-cont">Pour celles et ceux qui souhaitent dormir dans une chambre, c’est possible, mais à vos frais. Il
-            y a aussi la possibilité d’ajouter un matelas supplémentaire dans chaque chambre..</p>
+            y a aussi la possibilité d’ajouter un matelas supplémentaire dans chaque chambre.<br></p>
           
           <p class="information-titre" style="font-weight: bold;">2. Tentes (sur place)</p>
               <p class="information-cont">Pour les aventuriers, les romantiques sous les étoiles ou les nostalgiques du camping, vous
@@ -385,7 +385,7 @@
 
   <div class="rsvp-center">
     <a href="rsvp.html" class="rsvp-button">
-      RSVP avant le XXX
+      RSVP avant le 31.12.2025
     </a>
   </div>
 </section>
