--- a/histoire.html
+++ b/histoire.html
@@ -126,7 +126,7 @@
     </div>
 
     <p class="signature">
-      Signé : votre narratrice d’un an (et déjà un peu fière de ses parents),<br>
+      Signé : votre narratrice de huit mois (et déjà un peu fière de ses parents),<br>
       <strong>Mayla</strong>
     </p>
 
@@ -135,6 +135,7 @@
 
 </body>
 </html>
+
 
 
 
