--- a/main.html
+++ b/main.html
@@ -39,7 +39,7 @@
 
 
   <!-- Section Hero -->
-  <section class="section-bg hero" style="background-image: url('main.jpg');">
+  <section class="section-bg hero" style="background-image: url('image/main.jpg');">
     <div class="overlay-text">
       <p id="countdown" class="countdown">00 : 00 : 00 : 00></p>
       <h1><br>ANNIK & JOAQUIM<br><br></h1>
@@ -121,7 +121,7 @@
       </div>
       <div class="timeline-item left">
         <div class="content">
-          <h3>15H30 –Rallye 🚩</h3>
+          <h3>15H30 – Rallye 🚩</h3>
           <p>Jeux et défis en équipes</p>
         </div>
       </div>
@@ -204,7 +204,7 @@
 
           <p class="information-titre" style="font-weight: bold;">1. Chambres à l’hôtel Chäserstatt (sur place)</p>
             <p class="information-cont">Pour celles et ceux qui souhaitent dormir dans une chambre, c’est possible, mais à vos frais. Il
-            y a aussi la possibilité d’ajouter un matelas supplémentaire dans chaque chambre.<br></p>
+            y a aussi la possibilité d’ajouter un matelas supplémentaire dans chaque chambre.<br><br></p>
           
           <p class="information-titre" style="font-weight: bold;">2. Tentes (sur place)</p>
               <p class="information-cont">Pour les aventuriers, les romantiques sous les étoiles ou les nostalgiques du camping, vous
@@ -276,7 +276,7 @@
         <p>Soyez beaux mains moins beaux que nous<p>
       </details>
       <details class="faq-item">
-        <summary>Le e mariage se déroule-t-il en intérieur ou en extérieur ?</summary>
+        <summary>Le mariage se déroule-t-il en intérieur ou en extérieur ?</summary>
         <p>Entièrement en extérieur, sous tente. En cas de mauvais temps il y aura des chauffages.<p>
       </details>
       <details class="faq-item">
@@ -369,10 +369,6 @@
     <div class="rsvp-info"><br>
       +41 (0)78 872 79 95 (Annik)<br>
       <br>+41 (0)79 714 41 81 (Joaquim)
-    </div> 
-    <div>
-      Nous serons trois à célébrer cet amour, nous aimerions que vous soyez là avec nous.
-    </div>
   </section>
 
   <!-- RSVP -->
