--- a/histoire.html
+++ b/histoire.html
@@ -44,7 +44,7 @@
     <div class="chapitre">
     
       <p>Bonjour à tous,<br><br>
-        Je m’appelle Mayla et même si j’ai seulement un an, je suis déjà une grande experte de l’amour…
+        Je m’appelle Mayla et même si j’ai seulement quelques mois, je suis déjà une grande experte de l’amour…
         parce que j’ai eu la chance d’arriver dans la plus belle histoire de toutes : celle de mes parents, Annik
         et Joaquim.<br><br>
         Alors installez-vous, je vous raconte tout depuis le début</p>
@@ -58,11 +58,11 @@
       Il y a plus de 17 ans (oui oui, ça fait beaucoup pour moi, j’ai même pas encore 17 mois !), mes parents se sont rencontrés à l’école, dans la même classe. Très vite, une rumeur tournait comme quoi un garçon de la classe était amoureux de maman.<br><br>
       Et puis arrive le 12 décembre, la fameuse fête de l’Escalade. Ce jour-là papa envoie un SMS (c’est comme ça qu’on appelait les messages à cette époque-là) à maman pour lui dire qu’il allait révéler l’identité de son admirateur secret ce soir même. Pendant la boom de la fête à l’école, il prend son courage à deux mains pour lui avouer : « C’est moi le garçon amoureux de toi ».<br><br>
       Maman, un peu prise de court (et un peu indécise aussi), demande du temps pour réfléchir.<br><br>
-      Spoiler : ça lui prend environ une heure et une réunion d’urgence avec ses copines avant de revenir dire « oui ».<br>
+      Spoiler : ça lui prend environ 30 minutes et une réunion d’urgence avec ses copines avant de revenir dire « oui ».<br>
       Résultat : premier slow, premier bisou… et le début de leur histoire.
     </p>
   </div>
-  <img src="PH_CH4.png" alt="Rencontre" class="image-chapitre">
+  <img src="image/ch1.png" alt="Rencontre" class="image-chapitre">
 </div>
 
 
@@ -70,7 +70,7 @@
   <div class="chapitre-content">
     <h2>Chapitre 2 : Les années d’adolescence</h2>
     <p>Ensuite ? Des activités, des sorties, des longs au revoir derrière le tas de bois,
-        des cinés (#Twilight), des vacances au Tessin, des restos… bref, tout ce qu’il faut
+        des cinés, des restos… bref, tout ce qu’il faut
         pour se construire plein de souvenirs.<br><br>
         Puis vient le collège, mais rien ne change dans leurs habitudes. Jusqu’à ce qu’un
         jour maman parte un an au Canada.<br><br>
@@ -79,35 +79,43 @@
         N’empêche qu’il faut aussi dire merci à Skype! Grâce à lui (et aussi aux réveils matinaux de papa), ils ont pu continuer à se parler, à rire et à s’aimer malgré le décalage horaire. Comme quoi, quand c’est la bonne personne, même les océans n’y changent rien !
       </p>
   </div>
-  <img src="PH_CH4.png" alt="Adolescence" class="image-chapitre">
+  <div class="images-column">
+        <img src="image/ch2_1.jpg" alt="Université" class="image2-chapitre">
+        <img src="image/ch2_2.jpg" alt="Université" class="image2-chapitre">
+    </div>
+
+
 </div>
 
 
 
       
     <div class="chapitre">
-         <div class="chapitre-content">
-      <h2>Chapitre 3 : L’université et la vie d’adulte</h2>
+       <div class="chapitre-content">
+          <h2>Chapitre 3 : L’université et la vie d’adulte</h2>
       <p>Maman part encore… Mais cette fois elle ne va pas très loin. Elle va étudier le sport et l’anglais à Lausanne. Papa,
         lui, reste à Genève pour étudier la biologie. <br><br>
-        Résultat : ils se voient surtout le week-end.<br><br>
+        Résultat : ils ne se voient plus que le week-end.<br><br>
         Et puis arrive 2020 : le Covid, mais aussi leur séparation. Ce n’a pas été une période facile pour les deux. Pourtant, je suppose qu’elle a dû être nécessaire pour faire avancer et grandir leur couple.<br><br>
         Mais heureusement, il faut croire que quand deux personnes sont faites pour être ensemble… elles finissent toujours par se retrouver.<br><br>
         Après le confinement, maman et papa décident de redonner une chance à leur histoire et de s’installer ensemble. Bon… disons que la première tentative n’a pas été un succès. Mais comme les belles histoires trouvent toujours leur chemin, ils ont fini par se retrouver pour de bon, dans un petit appartement à Puplinge. Et cette fois, plus rien ne les a séparés.</p>
     </div>
-    <img src="PH_CH4.png" alt="Université" class="image-chapitre">
+    <div class="images-column">
+        <img src="image/ch3.jpg" alt="Université" class="image2-chapitre">
+        <img src="image/ch3_2.jpg" alt="Université" class="image2-chapitre">
+    </div>
 </div>
 
     <div class="chapitre">
         <div class="chapitre-content">
       <h2>Chapitre 4 : La demande et… moi !</h2>
-      <p>L’été 2024, durant leur voyage en Norvège, papa fait (finalement) sa demande de mariage. (Franchement, il était temps, non ?)<br><br>
+      <p>L’été 2024, durant leur voyage en Norvège, papa fait (enfin) sa demande de mariage. (Franchement, il était temps, non ?)<br><br>
       Mais ce qu’ils ignoraient, c’est qu’un autre bonheur les attendait durant ce même voyage… Deux semaines plus tard, ils découvraient qu’un petit cœur battait déjà dans le ventre de maman : moi.<br><br>
       Autant dire que le mariage a vite changé de priorité…<br><br>
       Et le 31 mars 2025, j’ai fait mon entrée dans ce monde et dans la vie de maman et papa.
       </p>
     </div>
-    <img src="PH_CH4.png" alt="Demande en mariage" class="image-chapitre">
+    <img src="image/ch4.jpg" alt="Demande en mariage" class="image-chapitre">
 </div>
 
 
@@ -118,7 +126,7 @@
         En août prochain, on sera là, entourés de tous ceux qu’on aime, pour célébrer 17 ans d’histoire, d’aventures, de séparations et de retrouvailles, de fou rires et de projets.<br><br>
         Et moi, je suis bien placée pour vous dire une chose : Mes parents sont la preuve vivante qu’avec de la patience, de l’écoute, beaucoup d’humour et un peu de Skype, l’amour peut tout traverser.</p>
     </div>
-    <img src="PH_CH4.png" alt="Aujourd'hui" class="image-chapitre">
+    <img src="image/ch5.jpg" alt="Aujourd'hui" class="image-chapitre">
     </div>
 
     <p class="signature">
