--- a/main.html
+++ b/main.html
@@ -39,7 +39,10 @@
 
 
   <!-- Section Hero -->
-  <section class="section-bg hero" style="background-image: url('image/main.jpg');">
+  <section class="section-bg hero" style="background-image: url('image/main.jpg'); background-size: contain;
+                background-repeat: no-repeat;
+                background-position: center;
+                height: 100vh;">
     <div class="overlay-text">
       <p id="countdown" class="countdown">00 : 00 : 00 : 00></p>
       <h1><br>ANNIK & JOAQUIM<br><br></h1>
@@ -72,9 +75,12 @@
   <!-- Texte court -->
   <section class="section-bg tier-hero">
     <div class="overlay-text2">
-      <h1>
+      <h2>
         Nous avons déjà dis OUI à l’amour et le fruit le plus beau en est notre petite Mayla. Aujourd’hui nous vous invitons à fêter avec nous cet amour, entourés de tous ceux qu’on aime.
-      </h1>
+      </h2>
+    </div>
+    <div class="rsvp-center" style="padding: 20px">
+      <img src="image/apres_main.jpeg" alt="Photo de famille" class="img" />
     </div>
   </section>
 
@@ -128,7 +134,7 @@
       <div class="timeline-item right">
         <div class="content">
           <h3>17H00 – Apéro🥂</h3>
-          <p>Boisson et amuse-bouches</p>
+          <p>Boissons et amuse-bouches</p>
         </div>
       </div>
       <div class="timeline-item left">
@@ -145,7 +151,7 @@
       </div>
       <div class="timeline-item left">
         <div class="content">
-          <h3>8H00 – Déjeuner 🥐</h3>
+          <h3>Dès 8H00 – Déjeuner 🥐</h3>
           <p>Pour les lève-tôt</p>
         </div>
       </div>
@@ -155,13 +161,13 @@
   <!-- Notre histoire -->
   <section id="histoire" class="section-bg notre-histoire">
     <div class="histoire-image">
-      <img src="https://picsum.photos/300/300" alt="Notre histoire">
+      <img src="image/notre_histoire.jpg" alt="Notre histoire" >
     </div>
     <div class="histoire-contenu">
       <h2>Notre histoire</h2>
       <p>« On a littéralement TOUT partagé ensemble : nos premiers regards, nos premières vacances,
       nos premiers désaccords… et même notre première rupture» – Annik</p>
-      <p>« XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX » – Joaquim</p>
+      <p>«Si notre amour tient une année à distance, il tiendra à vie» – Joaquim</p>
       <a href="histoire.html" class="btn-histoire">Pour tout l’histoire<br>Cliquez ici</a>
     </div>
   </section>
@@ -184,23 +190,23 @@
           <br><p class="information-cont">Le lieu du mariage n’est pas accessible en transports publics. La station de train la plus proche est celle de Fiesch. Depuis là une voiture est nécessaire. Si vous prévoyez de venir en transports
           publiques dites-le nous assez tôt pour que nous puissions nous arranger pour le dernier petit bout.<br>
           Au bout du village de Mühlebach, lieu juste avant la dernière montée, il y a un grand espace où il est
-          possible de se garer gratuitement. Coordonnées du parking gratuit de Mühlebach : 46°24'36.0"N
+          possible de se garer gratuitement. Voici les coordonnées du parking gratuit de Mühlebach : 46°24'36.0"N
           8°09'30.7"E. Depuis cet endroit, deux options s’offrent à vous :<br><br>
 
           <p class="information-titre" style="font-weight: bold;">1.	Monter en voiture par le petit chemin de montagne<br></p>
-          <p class="information-cont">L'accès coûte 5 CHF par voiture, valables 24 heures (vous pouvez donc monter et descendre autant de fois que vous le souhaitez pendant cette période).<br>
+          <p class="information-cont">L'accès coûte 5 CHF par voiture et est valable 24 heures (vous pouvez donc monter et descendre autant de fois que vous le souhaitez pendant cette période).<br>
           En haut, de nombreuses places de parking sont disponibles, donc aucun souci de ce côté-là.<br><br></p>
 
           <p class="information-titre" style="font-weight: bold;">2.	Laisser la voiture en bas et faire du covoiturage<br></p>
-          <p class="information-cont">Le parking du bas est gratuit et spacieux.<br>
-          Vous pouvez ensuite partager un trajet avec d’autres invités pour la dernière partie du chemin.<br>
+          <p class="information-cont">Le parking du bas est gratuit et spacieux.
+          Vous pouvez ensuite partager un trajet avec d’autres invités pour la dernière partie du chemin.
           N’hésitez pas à vous organiser entre vous pour faciliter les montées !<br><br></p>
 
         <br><h2 class="information-titre-main">Logement</h2>
 
           <br><p class="information-cont">Nous aimerions beaucoup que tous nos invités puissent rester sur place pour profiter pleinement du weekend ensemble. Cependant, il n’y a pas assez de lits pour tout le monde.
 
-          <br><br>Voici donc les différentes possibilités :<br><br></p>
+          <br><br>Voici donc les différentes possibilités qui s'offrent à vous:<br><br></p>
 
           <p class="information-titre" style="font-weight: bold;">1. Chambres à l’hôtel Chäserstatt (sur place)</p>
             <p class="information-cont">Pour celles et ceux qui souhaitent dormir dans une chambre, c’est possible, mais à vos frais. Il
@@ -211,11 +217,11 @@
               pouvez planter votre tente gratuitement sur place. Si c’est une tente qui vous manque, pas de
               soucis on s’arrange.
               Vous pourrez utiliser les toilettes et les douches de l’hôtel, sans frais supplémentaires.
-              Pour celles et ceux qui souhaitent dormir dans une chambre, c’est possible, mais à vos frais.<br><br></p>
+             <br><br></p>
           <p class="information-titre" style="font-weight: bold;">3.  Vans ou voitures (sur place)</p>
             <p class="information-cont">Si vous avez un van ou souhaitez dormir dans votre voiture, c’est également possible !
             Vous pourrez utiliser les toilettes et les douches de l’hôtel, sans frais supplémentaires.
-            Il y aura aussi la possibilité d’ajouter quelques matelas supplémentaires dans certaines chambres si besoin.<br><br></p>
+            .<br><br></p>
 
           <p class="information-titre" style="font-weight: bold;">4.   Chambres à l’hôtel (ailleurs)</p>
             <p class="information-cont">Dans le cas où il n’y aurait plus de chambres sur place et que l’idée de faire du camping ne
@@ -228,7 +234,7 @@
           RSVP afin que nous puissions vous répartir dans les différentes chambres. Si besoin nous vous
           contacterons directement à ce sujet.</p>
 
-        <br><h2 class="information-titre-main">Arrivée sur place</h2>
+        <br><h2 class="information-titre-main">Arrivée et départ</h2>
           <br><p class="information-cont">Le mariage se déroulera sur deux jours : samedi et dimanche.<br>
           Nous, les mariés, serons déjà sur place quelques jours avant. Si certains souhaitent venir plus tôt
           pour profiter du lieu ce serait avec grand plaisir !<br>
@@ -256,24 +262,24 @@
   <!-- FAQ -->
   <section id="faq" class="faq">
     <h1 class="information-titre-main">FAQ</h1><br>
-    <p class="faq-intro">Vous avez sûrement encore des questions... Nous espérons pouvoir y répondre ici.</p>
+    <p class="faq-intro">Vous avez peut-être encore des questions... Nous espérons pouvoir y répondre ici.</p>
 
     <div class="faq-category">
       <h3>Informations pratiques</h3>
       <details class="faq-item">
-        <summary>Où et quand a lieu le mariage ?</summary>
+        <summary>Où et quand à lieu le mariage ?</summary>
         <p>Au Berghotel Chäserstatt (3995 Ernen) du samedi 8 août 2026 à 14h00 au dimanche 9 août 2026 à
         10h00.<br>
         Cependant, si vous voulez profitez du lieu, nous serions ravis de vous y voir déjà vendredi.</p>
       </details>
       <details class="faq-item">
         <summary>À quelle heure devons-nous arriver ?</summary>
-        <p>Vous êtes attendus à 14h00. La cérémonie commencera à 14h30.<br>
+        <p>Vous êtes attendus à 14h00 au plus tard. La cérémonie commencera à 14h30.<br>
         Cependant, si vous souhaitez arriver plus tôt pour profiter du lieu, nous serions ravis de vous y voir déjà vendredi.</p>
       </details>
       <details class="faq-item">
         <summary>Y a-t-il un dress code ?</summary>
-        <p>Soyez beaux mains moins beaux que nous<p>
+        <p>Soyez beaux mains moins beaux que nous 😉😘<p>
       </details>
       <details class="faq-item">
         <summary>Le mariage se déroule-t-il en intérieur ou en extérieur ?</summary>
@@ -342,13 +348,13 @@
         <p>Il y a une salle de jeux mais pas d’animations. <p>
       </details>
       <details class="faq-item">
-        <summary>Y a-t-il des lits et chaises pour bebe sur place ?</summary>
+        <summary>Y a-t-il des lits et chaises pour bébé sur place ?</summary>
         <p>Oui, les deux. Vous pourrez nous indiquer vos besoins à ce niveau au moment où vous compléterez le RSVP.<p>
       </details>
       <details class="faq-item">
         <summary>Puis-je venir avec un +1 ?</summary>
         <p>Les invitations sont nominative, nous souhaitons que le mariage reste un moment intime et à taille humaine, pour pouvoir profiter pleinement de chaque personne présente.<br> 
-        Merci beaucoup pour votre compréhension, et on se réjouit de vous compter parmi nous pour cette belle journée.<p>
+        Merci beaucoup pour votre compréhension et on se réjouit de vous compter parmi nous pour cette belle journée.<p>
       </details>
     </div>
     <div class="faq-category">
@@ -376,7 +382,7 @@
   
 
   <div class="rsvp-center" style="padding: 20px">
-    <img src="https://picsum.photos/300/300" alt="Photo de famille" />
+    <img src="image/rsvp.jpg" alt="Photo de famille" class="img" />
   </div>
 
   <div class="rsvp-text">
