--- a/rsvp.html
+++ b/rsvp.html
@@ -72,9 +72,9 @@
     <h2>Présence</h2> 
     <div class="radio-group">
         <label><input type="radio" name="entry.279183771" value="vendredi"> Je veux profiter un maximum, je vous rejoins déjà vendredi</label>
-        <label><input type="radio" name="entry.279183771" value="semdi + dimanche">Comptez sur ma présnece samedi et dimanche</label>
+        <label><input type="radio" name="entry.279183771" value="semdi + dimanche">Comptez sur ma présence samedi et dimanche</label>
         <label><input type="radio" name="entry.279183771" value="samedi"> Je serai de la partie le samedi uniquement</label>
-        <label><input type="radio" name="entry.279183771" value="absent"> Désolé je serai obligé de manquer cet évenement incroyable</label>
+        <label><input type="radio" name="entry.279183771" value="absent"> Désolé, je serai obligé de manquer cet évenement incroyable</label>
     </div>
      <div class="input-group textarea-container">
         <label>Commentaire :</label>
@@ -93,7 +93,7 @@
         <label><input type="radio" name="entry.667456340" value="chambre hotel"> Je souhaite dormir dans une chambre du Berghotel Chäserstatt (surpalce)</label>
         <label><input type="radio" name="entry.667456340" value="mes myoen"> Je ne dormirai pas sur place et me débrouille par mes prorpes moyens pour ce qui concerne le logement</label>
         <label><input type="radio" name="entry.667456340" value="je veux une tente"> Je veux La tente</label>
-        <label><input type="radio" name="entry.667456340" value="dormir pk?"> Dormir? Pourquoi faire? Faisons la fête</label>
+        <label><input type="radio" name="entry.667456340" value="dormir pk?"> Dormir? Pourquoi?</label>
     </div>
 
     <div class="input-group textarea-container">
@@ -102,14 +102,14 @@
     </div>
 
     <h2>Musique</h2>
-    <p>Votre musique incontournable pour une bonne soirée :</p>
+    <p>Si vous ne voulez pas entendre du Disney toute la nuit, n'hésitez pas à nous faire part de votre titre incontournable pour une bonne soirée.</p>
     <input type="text" class="small-input" name="entry.835506396">
 
     <!-- MATOS BÉBÉ -->
     <h2>Matériel bébé</h2>
     <div class="radio-group">
-        <label><input type="checkbox" name="entry.609603144" value="lit"> lit</label>
-        <label><input type="checkbox" name="entry.609603144" value="chaise"> chaise</label>
+        <label><input type="checkbox" name="entry.609603144" value="lit"> J'ai besoin d'un lit pour bébé</label>
+        <label><input type="checkbox" name="entry.609603144" value="chaise"> J'ai besoin d'une chaise haute pour bébé<label>
     </div>
 
     <button type="submit" class="btn-submit">Envoyer</button>
