--- a/main.html
+++ b/main.html
@@ -19,10 +19,10 @@
 
   <div class="nav-center">
     <div class="menu">
-      <a id="fete" href="#fete"></a>
+      <a id="nav_fete" href="#fete"></a>
       <a id="nav_histoire" href="#histoire"></a>
       <a id="nav_info" href="#Informations"></a>
-      <a id="nav_info" href="#faq"></a>
+      <a id="nav_faq" href="#faq"></a>
     </div>
   </div>
 
