--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
     <div class="menu">
       <a id="nav_fete" href="#fete"></a>
       <a id="nav_histoire" href="#histoire"></a>
-      <a id="nav_info" href="#Informations"></a>
+      <a id="nav_info" href="#info"></a>
       <a id="nav_faq" href="#faq"></a>
     </div>
   </div>
@@ -179,7 +179,7 @@
   </section>-->
 
 
-  <section id="Informations" class="information">
+  <section id="info" class="information">
     <div>
       
       <h1 class="information-titre-main" >Informations importantes</h1>
