--- a/main.html
+++ b/main.html
@@ -146,9 +146,9 @@
     </div>
     <div class="histoire-contenu">
       <h2 id="histoire_titre"></h2> 
-      <p hstoire_annik></p>
+      <p id="histoire_annik"></p>
       <p id="histoire_joaquim"></p>
-      <a href="histoire.html" class="btn-histoire"></a>
+      <a href="histoire.html" class="btn-histoire" id="histoire_button"></a>
     </div>
   </section>
 
