--- a/main.html
+++ b/main.html
@@ -391,7 +391,7 @@
       for (const id in translations) {
         const element = document.getElementById(id);
         if (element) {
-          element.textContent = translations[id];
+          element.innerHTML = translations[id];
         }
       }
     });
